# multi-crm-cross-sell

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  FIXES.md  LICENSE  Makefile  QUICKSTART.md  README.md  README_enhanced.md  ROADMAP.md  SECURITY.md  alembic.ini  check_setup.py  complete_setup.sh  create_structure.py  diagnose_streamlit.py  docker-compose.yml  final_github_push.sh  fix_ci.py  fix_docstrings.py  github-push.sh  github_setup_helper.sh  init_alembic.sh  main.py  push-now.sh  push-to-github.sh  push_deutsche_boerse_to_github.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  setup.sh  split_k8s_files.py  test_dashboard.py  validate_project.py  verify_andre_setup.py
.github/workflows/: ci-enhanced.yml  ci-original.yml  ci.yml  ci.yml.backup  ci.yml.backup2  ci.yml.bak
alembic/: env.py
backups/20250719_110011/: dashboard.py  main.py
config/: ml_config.yaml  orgs.json  setup_guide.md
docs/: api.md  architecture.md  deployment.md  development.md  postman_collection.json
k8s/: deployment.yaml  ingress.yaml  service.yaml
k8s/monitoring/: grafana-values.yaml  prometheus-values.yaml
migrations/: README.md
observability/: README.md  grafana-dashboard.json
scripts/: evaluate.py  evaluate_entity_resolution.py  extract_salesforce_data.py  generate_sample_data.py  train_model.py
src/: __init__.py  orchestrator.py
src/api/: main.py
src/connectors/: base.py  salesforce.py
src/ml/: entity_resolution.py  feedback_logging.py  nlp_features.py  pipeline.py  summarizer.py
src/models/: database.py
src/utils/: __init__.py  data_contracts.py  logging_config.py  notifications.py
src/visualization/: dashboard.py
tests/: conftest.py  test_all.py  test_api.py  test_basic.py  test_connectors.py  test_ml.py  utils.py
tests/integration/: test_end_to_end.py  test_pipeline.py
tests/performance/: test_pipeline_performance.py
tests/unit/: test_api.py  test_connectors.py  test_processing.py
