# Python project configuration

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["src"]
skip_gitignore = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "integration: marks tests as integration tests",
    "slow: marks tests as slow",
    "ml: marks tests as machine learning tests",
]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "100"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-crm-cross-sell"
version = "1.0.0"
description = "AI-powered cross-sell opportunity identification"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Andre Profitt", email = "andre@example.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

dependencies = [
    # Core
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",

    # Salesforce Integration
    "simple-salesforce>=1.12.0",
    "requests>=2.31.0",
    "PyJWT>=2.8.0",
    "cryptography>=41.0.0",

    # Async Support
    "aiohttp>=3.8.0",
    "aiofiles>=23.2.0",

    # Machine Learning
    "torch>=2.0.0",
    "scikit-learn>=1.3.0",
    "xgboost>=1.7.0",
    "shap>=0.42.0",
    "transformers>=4.41.0",

    # Data Processing
    "joblib>=1.3.0",
    "pyarrow>=12.0.0",

    # API Framework
    "fastapi>=0.103.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.4.0",
    "python-multipart>=0.0.6",
    "slowapi>=0.1.9",

    # Task Queue & Scheduling
    "celery>=5.3.0",
    "redis>=5.0.0",
    "apscheduler>=3.10.0",

    # Database
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "asyncpg>=0.28.0",

    # Visualization
    "plotly>=5.17.0",
    "streamlit>=1.27.0",

    # Configuration
    "pyyaml>=6.0.0",

    # Security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.0",
    "email-validator>=2.0.0",

    # Utilities
    "click>=8.1.0",
    "backoff>=2.2.0",
    "tenacity>=8.2.0",
    "faker>=19.0.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
    "httpx>=0.25.0",
    "factory-boy>=3.3.0",

    # Code quality
    "black>=23.9.0",
    "flake8>=6.1.0",
    "flake8-docstrings>=1.7.0",
    "flake8-bugbear>=23.9.0",
    "flake8-comprehensions>=3.14.0",
    "isort>=5.12.0",
    "pylint>=2.17.0",
    "mypy>=1.5.0",
    "interrogate>=1.5.0",
    "bandit>=1.7.0",

    # Pre-commit
    "pre-commit>=3.4.0",

    # Documentation
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=1.3.0",
    "pdoc3>=0.10.0",

    # Development tools
    "ipython>=8.15.0",
    "ipdb>=0.13.0",
    "jupyter>=1.0.0",
    "notebook>=7.0.0",

    # Profiling
    "memory-profiler>=0.61.0",
    "line-profiler>=4.1.0",
    "py-spy>=0.3.14",

    # Database tools
    "aiosqlite>=0.19.0",

    # API testing
    "locust>=2.17.0",

    # Type stubs
    "types-requests>=2.31.0",
    "types-PyYAML>=6.0.0",
    "types-python-dateutil>=2.8.0",
    "types-redis>=4.6.0",

    # Build tools
    "setuptools>=68.2.0",
    "wheel>=0.41.0",
    "twine>=4.0.0",
    "bump2version>=1.0.0",
]

[project.scripts]
cross-sell = "main:main"

[project.urls]
Homepage = "https://github.com/Andre-Profitt/multi-crm-cross-sell"
Repository = "https://github.com/Andre-Profitt/multi-crm-cross-sell"
Documentation = "https://github.com/Andre-Profitt/multi-crm-cross-sell/docs"
